<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/log"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditLogActivity">

    <!-- Add your UI components here -->

    <!-- Back Button -->
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/editLogToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/md_theme_onSurface"
        tools:ignore="MissingConstraints">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/back_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/back" />
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="75dp"
        app:layout_constraintTop_toBottomOf="@id/editLogToolbar">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/feelingCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:checkable="true"
            android:clickable="false"
            android:focusable="true"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            app:strokeColor="@color/md_theme_onBackground_mediumContrast"
            app:strokeWidth="1dp"
            tools:ignore="MissingConstraints">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/feelingSliderText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/feeling_slider"
                        android:textSize="24sp" />

                    <com.google.android.material.slider.Slider
                        android:id="@+id/feelingSlider"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:stepSize="0"
                        android:value="0.50"
                        android:valueFrom="0"
                        android:valueTo="1"
                        android:contentDescription="@string/feeling_slider_description"/>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clipChildren="false"
                        android:orientation="horizontal"
                        android:padding="5dp"
                        android:layout_marginBottom="8dp">

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/veryUnpleasant"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentStart="true"
                            android:text="@string/very_unpleasant"
                            android:textSize="12sp" />

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/Neutral"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:text="@string/neutral"
                            android:textSize="12sp" />

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/veryPleasant"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:text="@string/very_pleasant"
                            android:textSize="12sp"
                            tools:ignore="RelativeOverlap" />
                    </RelativeLayout>

                    <com.google.android.material.divider.MaterialDivider
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="0dp"/>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/journalTextBox"
                        style="?attr/textInputFilledStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:hint="@string/journal_away">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.divider.MaterialDivider
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="0dp"/>

                    <TimePicker
                        android:id="@+id/journalTime"
                        android:layout_margin="16dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <DatePicker
                        android:id="@+id/journalDate"
                        android:layout_margin="16dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/saveButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/save" />

                </LinearLayout>
            </ScrollView>
        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
